traefik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
    - name: traefik
      port: 80
      targetPort: traefik
  selector:
    app.kubernetes.io/name: traefik
